--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ matrix:
     - node_js: "10"
       script:
         # - ./node_modules/.bin/grunt && istanbul report text && ( cat coverage/lcov.info | $(npm get prefix)/bin/coveralls || true ) && rm -rf coverage
-        - ./node_modules/.bin/grunt && grunt ui-test --browserstack
+        - ./node_modules/.bin/grunt ui-test --browserstack
       before_script:
         # - npm install -g istanbul coveralls
         - scripts/install-ui-test-dependencies.sh
